[package]
name = "crypto-ioctls"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"
keywords = ["crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.39"
crypto-bindings = { git = "https://github.com/cloudkernels/crypto-bindings" }
vmm-sys-util = ">=0.2.1"
